# ctvlm

./: .dockerignore  .env.example  .gitignore  CITATION.cff  Dockerfile  LICENSE  README.md  docker-compose.thor.yml  docker-compose.yml  pyproject.toml
checkpoints/: concat_rate_probe.pt
configs/: paths.yaml
data/: noncontrast_sids.txt  rate_canonical_map.csv
data/demo_features/merlin_global/: AC421363e.npy  AC421363f.npy  AC4213641.npy  AC4213644.npy  AC4213645.npy  AC4213646.npy  AC4213647.npy  AC4213649.npy  AC421364a.npy  AC421364b.npy
data/demo_features/pillar0_emb/: AC421363e.npy  AC421363f.npy  AC4213641.npy  AC4213644.npy  AC4213645.npy  AC4213646.npy  AC4213647.npy  AC4213649.npy  AC421364a.npy  AC421364b.npy
deploy/: README.md  example_dicom_to_nifti.py  example_orthanc_hook.py  example_worker.py
deploy/thor/: README.md
docs/: 01_OVERVIEW.md  02_INSTALLATION.md  03_PYTHON_API.md  04_DATA_PIPELINE.md  05_ORTHANC_INTEGRATION.md  06_GPU_BROKER_INTEGRATION.md  07_CALIBRATION.md  08_FINDINGS_TAXONOMY.md  09_GRAD_CAM.md  10_PERFORMANCE.md  11_LIMITATIONS.md  12_OPERATIONS.md  13_MODEL_WEIGHTS.md  14_CACDRS_CHESTCT_PROBE.md
landing/: index.html
scripts/: 41_merlin_rate_probe.py  download_weights.sh  smoke_test.py  startup.sh
src/: config.py
src/agent/: cache.py  canonical.py  cli.py  pipeline.py  recipes.py  render.py  router.py  schema.py  templates.py  tools.py
src/data/: merlinplus.py  roi_crops.py
src/embeddings/: attention_pool.py  merlin.py  pillar0.py
src/explain/: cam.py
src/graph/: anatomy_prior.py
src/ontology/: finding_extractor.py
tests/: test_canonical.py  test_merlinplus.py  test_roi_crops.py
viewer/: README.md  ct_files_server.py  streamlit_app.py  web_app.py
